# DMancipate

./: .flaskenv  .gitignore  Dockerfile  LICENSE  README.md  bonfire-config.yaml  cookiecutter.json  output.py  pyproject.toml
src/DMancipate/: __init__.py  api.py  ingestion.py
src/DMancipate/llm/: config.py  langchain_client.py  llm_client.py  open_ai_client.py
src/dmancipate_cli/: __init__.py  cli.py
templates/: service-template.yaml
